--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 openpyxl==3.1.2
 outcome==1.3.0.post0
 PySocks==1.7.1
