--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,14 @@ exceptiongroup==1.1.3
 h11==0.14.0
 idna==3.4
 Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.3
 openpyxl==3.1.2
 outcome==1.3.0.post0
 PySocks==1.7.1
+referencing==0.32.1
+rpds-py==0.16.2
 selenium==4.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
